# Unet-Segmentation

./: CMakeLists.txt  README.md  plugins.config
caffe/: caffe.proto
resources/: README.html
src/: HostConfigurationPanel.java  ImagePlusListView.java  ModelDefinition.java  MySftpProgressMonitor.java  MyUserInfo.java  NotImplementedException.java  ProcessResult.java  TaskStatus.java  UnetFinetuneJob.java  UnetJob.java  UnetJobManager.java  UnetJobTableModel.java  UnetSegmentationJob.java  UnetTools.java  Unet_Segmentation_Manager.java
src/de/unifreiburg/unet/: ApplyDeformationLayer.java  Blob.java  BlobException.java  ByteBlob.java  CaffeBlob.java  CaffeJob.java  ConcatAndCropLayer.java  ConnectedComponentLabeling.java  ConvolutionLayer.java  CreateBlobsJob.java  CreateBlobsWithImagePairsJob.java  CreateBlobsWithRoisJob.java  CreateDeformationLayer.java  DataLayer.java  DetectionJob.java  DistanceTransform.java  DropoutLayer.java  FinetuneJob.java  FinetuneJobException.java  FinetuneWithImagePairsJob.java  FinetuneWithRoisJob.java  FloatBlob.java  GenericBlob.java  HostConfigurationPanel.java  IncompatibleImagesException.java  IntBlob.java  Job.java  JobManager.java  JobManagerPlugin.java  JobTableModel.java  MaskEmbedder.java  MaskExtractor.java  ModelDefinition.java  ModelDefinitionEditor.java  MyUserInfo.java  Net.java  NetworkLayer.java  NotImplementedException.java  Pair.java  PoolingLayer.java  (+22 more)
test/: TestNetworkAnalyzer.java
